fix first screen on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,6 +698,7 @@ footer {
 
   #calltoaction {
     margin-top: 10%;
+    overflow-x: hidden;
   }
 
   #calltoaction h1 {
